--- a/init.org
+++ b/init.org
@@ -865,7 +865,10 @@ Not sure I need this since I'm using CIDER, not babel, to execute Clojure in
 org-mode
 
 #+begin_src elisp :tangle ./init.el
-;; not sure if I need this
+;; use Cider REPL to eval Clojure code in org-mode
+(load "~/.emacs.d/elisp/cider-eval-in-org-mode.el")
+
+;; not sure if I need the code below
 
 ;; (defun org-babel-clojure-cider-current-ns ())
 ;; 'org-confirm-babel-evaluate nil
