added poly-org and explained ns search in org-mode Clojure

--- a/init.org
+++ b/init.org
@@ -64,7 +64,9 @@ instead of setq, to avoid confusion in Customize interface"
      ob-clojurescript ob-async async wgrep
      openwith org-tidy cider treemacs-all-the-icons treemacs
      clojure-mode magit command-log-mode posframe pcre2el dired-ranger
-     flycheck flycheck-clj-kondo rainbow-delimiters casual-avy puni)))
+     flycheck flycheck-clj-kondo rainbow-delimiters casual-avy puni
+     poly-org
+     )))
 
 ;; install all non-default packages
 (dolist (pkg package-selected-packages)
@@ -860,15 +862,30 @@ The defaults are cycled in minibuffer with up/down arrows.
 (define-key org-mode-map (kbd "M-s") 'org-babel-demarcate-block)
 #+end_src
 
+*** Multiple major modes in the same buffer (polymode)
+I use poly-org package which automatically and quickly switches modes, when I
+go inside code blocks. This allows working with code as easily as in source
+files, without constant painful buffer/context switching.
+
 *** Code execution
-Not sure I need this since I'm using CIDER, not babel, to execute Clojure in
-org-mode
+**** Eval in Cider REPL with proper namespace
+To figure out the namespace of a code block:
+
+1. We create a graph, where edges are noweb refs.
+2. Using the graph, we find root code block, which points to source file
+3. In the source file, we find =(ns ...)= macro, which gets us a namespace.
+   To do that, we =(advice-add 'cider-current-ns)== - if we are
+   inside :noweb-ref block, ns search function is called on the :tangle file
 
 #+begin_src elisp :tangle ./init.el
 ;; use Cider REPL to eval Clojure code in org-mode
 (load "~/.emacs.d/elisp/cider-eval-in-org-mode.el")
+#+end_src
 
-;; not sure if I need the code below
+**** Babel settings *DISABLED*
+#+begin_src elisp :tangle ./init.el
+;; not sure if I need the code below since I'm using straight-up CIDER, not
+;; Babel, to execute Clojure in org-mode
 
 ;; (defun org-babel-clojure-cider-current-ns ())
 ;; 'org-confirm-babel-evaluate nil
