add comment macro

--- a/init.org
+++ b/init.org
@@ -107,6 +107,10 @@ instead of setq, to avoid confusion in Customize interface"
  ;; Silence warnings for redefinition
  'ad-redefinition-action 'accept
  )
+
+(defmacro comment (&rest body)
+  "A simple way to comment out code in Emacs Lisp."
+  nil)
 #+end_src
 
 ** Use SSH through daemon launched on startup
