--- a/init.org
+++ b/init.org
@@ -1,5 +1,5 @@
 :PROPERTIES:
-:header-args: :comments both :noweb yes
+:header-args: :comments both :noweb yes :mkdirp yes
 :END:
 
 * Emacs init.el configuration file
