--- a/init.org
+++ b/init.org
@@ -965,15 +965,15 @@ found a workaround, but I was wrong. See [[https://github.com/polymode/poly-org/
 
 ;; (setq help/default-gc-cons-threshold gc-cons-threshold)
 ;; (defun help/set-gc-cons-threshold (&optional multiplier notify)
-;;   "Set `gc-cons-threshold' either to its default value or a
-;;    `multiplier' thereof."
+;;   "Set `gc-cons-threshold` either to its default value or a
+;;    `multiplier` thereof."
 ;;   (let* ((new-multiplier (or multiplier 1))
 ;;          (new-threshold (* help/default-gc-cons-threshold
 ;;                            new-multiplier)))
 ;;     (setq gc-cons-threshold new-threshold)
-;;     (when notify (message "Setting `gc-cons-threshold' to %s"
+;;     (when notify (message "Setting `gc-cons-threshold` to %s"
 ;;                           new-threshold))))
-;; (defun help/double-gc-cons-threshold () "Double `gc-cons-threshold'." (help/set-gc-cons-threshold 2))
+;; (defun help/double-gc-cons-threshold () "Double `gc-cons-threshold`." (help/set-gc-cons-threshold 2))
 ;; (add-hook 'org-babel-pre-tangle-hook #'help/double-gc-cons-threshold)
 ;; (add-hook 'org-babel-post-tangle-hook #'help/set-gc-cons-threshold)
 #+end_src
